--- a/_layouts/allposts.html
+++ b/_layouts/allposts.html
@@ -20,13 +20,15 @@
       <section id="one">
 	<div class="inner">
           {% for post in site.posts %}
-	  {% if post.title != 404 %}
+    {% if post.title != 404 %}
+    <a href="{{ post.url }}">
 	  <header class="major">
 	    <h1>{{ post.title }}</h1>
 	  </header>
 	  {% if post.image %}<span class="image main"><img src="{{ site.baseurl }}/{{ post.image }}" alt="" /></span>{% endif %}
-	  {% if post.date %}<p>{{ post.date }}</p>{% endif %}
-	  <p>{{ post.content }}</p>
+	  {% if post.date %}<p>{{ post.date | date_to_string }}</p>{% endif %}
+    <p>{{ post.content }}</p>
+    </a>
 	  {% endif %}
           {% endfor %}
 	</div>
